# src/api.yaml
@@ -95,3 +95,33 @@ paths:
                     type: number
                   body:
                     type: string
+
+  /api/v1/github/{owner}/{repo}/issue/{issue_number}/image:
+    parameters:
+      - name: owner
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: repo
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: issue_number
+        in: path
+        required: true
+        schema:
+          type: number
+    get:
+      operationId: github
+      responses:
+        200:
+          description: Returns true if the body of the issue contains an image
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  containsImage:
+                    type: boolean
